detail view introduced for the read purpose

--- a/application/templates/create.html
+++ b/application/templates/create.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 <div class="content">
+  <h3>New Application:</h3>
   <div class="col">
     <form method="post" action="">
         {% csrf_token %}
