--- a/application/static/css/recruitment.css
+++ b/application/static/css/recruitment.css
@@ -18,3 +18,4 @@ body {margin: 0px; padding:0px; background-color: #e8e8e8}
 .create p {font-size: 12px;}
 a {text-decoration: none; color: white;}
 .details {width: 100%}
+.details a {color:blueviolet;}
