--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -3,6 +3,7 @@
 	<title>Recruitment Site</title>
 	{% load static%}
 	<link rel="stylesheet" type="text/css" href="{%static 'css/recruitment.css' %}">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	</head>
 	<body>
 		<div class="holder">
@@ -25,5 +26,46 @@
 				{% endblock %}
 			</div>
 		</div>
+		<script type="text/javascript">
+			function getCookie(name)
+			{
+			    var cookieValue = null;
+			    if (document.cookie && document.cookie != '') {
+			        var cookies = document.cookie.split(';');
+			        for (var i = 0; i < cookies.length; i++) {
+			            var cookie = jQuery.trim(cookies[i]);
+			            // Does this cookie string begin with the name we want?
+
+			            if (cookie.substring(0, name.length + 1) == (name + '=')) {
+			                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+			                break;
+			            }
+			        }
+			    }
+			    return cookieValue;
+			}
+			$(document).ready(function(){
+				$.ajaxSetup({
+					beforeSend: function(xhr, settings) {
+						if (!(/^http:.*/.test(settings.url) || /^https:.*/.test(settings.url))) {
+						// Only send the token to relative URLs i.e. locally.
+			            xhr.setRequestHeader("X-CSRFToken", getCookie('csrftoken'));
+			        }
+			    } });
+			    $('.status').click(function(){
+					app_id = $(this).attr('id');
+					url = '/status/'
+					 $.ajax({
+					  type: "POST",
+					  url: url,
+					  data: {'app_id':app_id},
+					  success: function(data) {
+					  	alert(data.message);
+					  	window.location.reload();
+					  }
+					});
+				});
+			});
+		</script>
 	</body>
 </html>
