--- a/application/templates/create.html
+++ b/application/templates/create.html
@@ -1,7 +1,7 @@
 {%extends "base.html"%}
 
 {% block content %}
-<div class="content">
+<div class="content" align="center">
   <h3>New Application:</h3>
   <div class="col">
     <form method="post" action="">
