--- a/application/templates/login.html
+++ b/application/templates/login.html
@@ -1,7 +1,7 @@
 {%extends "base.html"%}
 
 {% block content %}
-<div class="content">
+<div class="content" align="center">
 	<div class="col">
 		<form method="post" action="">
 		  	{% csrf_token %}
@@ -19,7 +19,7 @@
 		  		<tr>
 		  			<td colspan="2" align="right"><input type="submit" value="LOGIN"></input></td>
 		  		</tr>
-		  	<table>
+		  	</table>
 		  </form>
 		 </div>
 	</div>
